--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -7,9 +7,11 @@
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.9.0",
-    "@clerk/themes": "^2.2.0",
+    "@repo/env": "workspace:^",
     "@repo/tailwind-config": "workspace:*",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.47.10",
+    "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "server-only": "^0.0.1"
