--- a/apps/app/.env.example
+++ b/apps/app/.env.example
@@ -1,8 +1,7 @@
 # Server
-CLERK_SECRET_KEY=""
-CLERK_WEBHOOK_SECRET=""
 RESEND_FROM=""
-DATABASE_URL=""
+DATABASE_URL="postgresql://postgres.etegjmamganuzviahoyp:pdu9meu5xav4afu.WJK@aws-0-us-east-1.pooler.supabase.com:6543/postgres?pgbouncer=true&connection_limit=1"
+DIRECT_URL="postgresql://postgres.etegjmamganuzviahoyp:[YOUR-PASSWORD]@aws-0-us-east-1.pooler.supabase.com:5432/postgres"
 RESEND_TOKEN=""
 STRIPE_SECRET_KEY=""
 STRIPE_WEBHOOK_SECRET=""
@@ -15,11 +14,6 @@ LIVEBLOCKS_SECRET=""
 BASEHUB_TOKEN=""
 
 # Client
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
-NEXT_PUBLIC_CLERK_SIGN_IN_URL="/sign-in"
-NEXT_PUBLIC_CLERK_SIGN_UP_URL="/sign-up"
-NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL="/"
-NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL="/"
 NEXT_PUBLIC_GA_MEASUREMENT_ID=""
 NEXT_PUBLIC_POSTHOG_KEY=""
 NEXT_PUBLIC_POSTHOG_HOST=""
